--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -3,10 +3,6 @@ html {
    
 }
 
-body {
-    
-}
-
 .spacing{
     margin-top: 100;
 }
@@ -105,4 +101,27 @@ body {
     margin-bottom: 100px;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
+}
+
+.small-profile {
+    height: 45px;
+}
+
+.phone-input {
+    width: 100% !important;
+    border-radius: 0 !important;
+}
+
+.phone-country {
+    height: 32px !important;
+    top: 1px !important;
+    left: 1px !important;
+    border: 0 !important;
+    border-right: solid 1px;    
+    border-radius: 0 !important;
+
+}
+
+.phone-input:focus {
+    border-color: #593196 !important;
 }
