fixed several elements styles to match the page style

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -3,6 +3,12 @@ html {
    
 }
 
+body {
+    background-image: url('../image/funky-lines.png');
+    background-repeat: repeat;
+    back
+}
+
 .spacing{
     margin-top: 100;
 }
@@ -107,21 +113,38 @@ html {
     height: 45px;
 }
 
-.phone-input {
-    width: 100% !important;
-    border-radius: 0 !important;
+.ui.selection.dropdown
+{
+    border-radius: 0;
+    border-color:#cbc8d0;
 }
 
-.phone-country {
-    height: 32px !important;
-    top: 1px !important;
-    left: 1px !important;
-    border: 0 !important;
-    border-right: solid 1px;    
-    border-radius: 0 !important;
-
+.ui.selection.dropdown:hover
+{
+    border-color:#cbc8d0;
 }
 
-.phone-input:focus {
-    border-color: #593196 !important;
+.ui.selection.active.dropdown {
+ border-color:#593196;
+}
+.ui.selection.active.dropdown .menu {
+ border-color:#593196;
+ border-radius: 0;
+}
+.ui.selection.dropdown:focus {
+ border-color:#593196;
+}
+.ui.selection.dropdown:focus .menu {
+ border-color:#593196;
+}
+.ui.selection.active.dropdown:hover {
+ border-color:#593196;
+ box-shadow: 0 0 5px rgba(100,65,164,0.4);
+}
+.ui.selection.active.dropdown:hover .menu {
+ border-color:#593196;
+ box-shadow: 0 0 5px rgba(100,65,164,0.4);
+}
+.ui.label {
+    border-radius: 0;
 }
