fixed app to adapt the changes at the backend. fixed some errors

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -112,6 +112,8 @@ body {
     height: 45px;
 }
 
+.profile-pic { max-width: 100%; }
+
 .post-component {
     margin-top: 3px;
     background-color: white;
